--- a/RN2011.md
+++ b/RN2011.md
@@ -3,7 +3,7 @@
 ## **Reading Notes 1**
 
 ### Introduction (HTML)
-I was ecstatic when I opened these books to find beautiful, clear, welcoming pages. THe into gives an explanatiom about the structure of not only the book, but the web. a "how it works" and I think that is important, because although it may be assumed that knowledge is known, it is not knowledge one is born with.
+I was ecstatic when I opened these books to find beautiful, clear, welcoming pages. The intro gives an explanatiom about the structure of not only the book, but the web. a "how it works" and I think that is important, because although it may be assumed that knowledge is known, it is not knowledge one is born with.
 
 ### Structure
 In this chapter he explains how HTML is the structure of a webpage. A nice descroptive, visual page of what a tag is, and also elements. The basic outline of a page is given (titl, head, body),, and that HTML stands for "HyperText Markup Language." Explained also is how to start a webpage, from PC and MAC., and taks about content manageent systems.
@@ -18,7 +18,7 @@ HTML5 has elements that are new,considering at least from previous HTML. Has a l
 
 ### Process & Design
 This is an extraordinary resource to help start the process, especially as it pertains to **WHO** will be viewing your website.mapping our your audience's occupation, age, income, etc is important. A (fictional even) target audience will help then disign the site to market properly. Come up with who, what (are they visiting the site for), what (are they trying to achieve), what (information they will get from the site, and how.) THe site map is visually helpful, then it can be made into a wireframe.
-the way the page is organnized is oh-so important (this is SO intriguing to me, what has visual hierarchy, etc.).
+the way the page is organized is oh-so important (this is SO intriguing to me, what has visual hierarchy, etc.).
 
 ### Introduction (JS)
 Another inviting book, this time about Javascript and Jquery. Here we are introduced to how Javascript makes the pages more alive for the user. Everything to buying tickets, filtering data, games, and more. Javascript is added to HTML and CSS.
