--- a/RN2012.md
+++ b/RN2012.md
@@ -11,20 +11,20 @@ subscript <sub>
 white Space (extra spaces)
 Line Breaks <br />
 Horizontal Rules <hr />
+  
+  These will appear as such on this document!
 
 He also describes semantic markup for HTML, tags that add extra information to the page.
-Examples are:
+Some examples are:
 
-1.Strong <strong>
+1. Strong <strong>
 2. Emphasis (italic) <em>
 3. Quotations <blockquote> or <q>
 4. Abbreviations <abbr> and acronyms
 5. Citations <cite>
 6. Definitions <dfn>
 7. Author Details <address>
-8. Changes to Content <ins> & <del> & <s>
 
-*The above is from the Jon Duckett book, pp.43-55
 
 ### "Intro to CSS":
 
@@ -78,3 +78,15 @@ THe examples shown are very helpful, and I will look forward to trying them, as 
 ## Things I want to know more about:
 I am curious how intricate I can make a background with CSS and how.
 I wonder, so are comments really used frequently?
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
