--- a/RN2013.md
+++ b/RN2013.md
@@ -4,7 +4,7 @@
 ### Chapter 3, "Lists"
 
 In this chapter, lists are discussed. 
-in HTML, there are ordered lists<ol>, unordered lists<ul>, and defiition lists<dl>
+in HTML, there are ordered lists, unordered lists, and definition lists<dl>
 There are also nested lists, which is a sub list nested within a list.
 
 If it is an ordered list, it will show with numbers. Unordered, will be with bullets.
